added dashboard.js to dashboard page

--- a/blink_sass/basic.sass
+++ b/blink_sass/basic.sass
@@ -1,3 +1,7 @@
+.main-content
+    margin-top: 50px
+
+// TODO: Refactor this into our styles
 /********************************************
  * Main General Styles
  *******************************************/
