--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
     {% block secondary_nav %}{% endblock %}
 </div>
 
-<main id="{% block page_name %}content{% endblock %}" class="container">
+<main id="{% block page_name %}content{% endblock %}" class="container main-content">
     {% if messages %}
         <div class="row">
             <div class="col-lg-12">
