changed login redirect link to dashboard page. issue #6

--- a/blink_sass/style.sass
+++ b/blink_sass/style.sass
@@ -16,6 +16,6 @@
 // --------------------------------------------
 // Custom scss 
 // --------------------------------------------
-
+@import basic
 @import components/manifest
 
