--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -49,27 +49,26 @@
             <li class="menu-item has-drop-down">
                 <a>WORKBOOKS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
+                     {% if user.workbook_last_view_set.all|length > 0 %}
                     <li class="menu-item">
-                        <strong>Recent</strong>
+                        <strong>Start New Workbook With ...</strong>
                         <ul class="item-list">
-                            <li class="menu-item"> Workbook A </li>
-                            <li class="menu-item"> Workbook B </li>
-                            <li class="menu-item"> Workbook C </li>
-                            <li class="menu-item"> Workbook D </li>
-                            <li class="menu-item"> Workbook E </li>
+                            {% for wlv in user.workbook_last_view_set.all|dictsortreversed:'last_view'|slice:':5' %}
+                            <li class="menu-item"><a href="{% url 'workbook_detail' wlv.workbook.id %}">{{ wlv.workbook.name }}</a></li>
+                            {% endfor %}
+                            {% if user.workbook_last_view_set.all|length > 5 %}
                             <li class="menu-item has-drop-down__more"> More
-                                <ul class="item-sublist drop">
-                                    <li class="menu-item">Workbook F</li>
-                                    <li class="menu-item">Workbook H</li>
-                                    <li class="menu-item">Workbook I</li>
-                                    <li class="menu-item">Workbook J</li>
-                                    <li class="menu-item">Workbook K</li>
-                                    <li class="menu-item">Workbook L</li>
+                                <ul class="drop">
+                                    {% for wlv in user.workbook_last_view_set.all|dictsortreversed:'last_view'|slice:'5:' %}
+                                    <li class="menu-item"><a href="{% url 'workbook_detail' wlv.workbook.id %}">{{ wlv.workbook.name }}</a></li>
+                                    {% endfor %}
                                 </ul>
                             </li>
+                            {% endif %}
                         </ul>
                     </li>
-                    <li class="menu-item"><a href="/">Saved Workbooks (10)</a></li>
+                    {% endif %}
+                    <li class="menu-item"><a href="{% url 'workbooks' %}">Saved Workbooks (0)</a></li>
                     <li class="menu-item"><a href="/">Create a New Workbook</a></li>
                     <li class="menu-item"><a href="/">Sample Workbooks</a></li>
                 </ul>
