--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -49,9 +49,9 @@
             <li class="menu-item has-drop-down">
                 <a>WORKBOOKS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
-                     {% if user.workbook_last_view_set.all|length > 0 %}
+                    {% if user.workbook_last_view_set.all|length > 0 %}
                     <li class="menu-item">
-                        <strong>Start New Workbook With ...</strong>
+                        <strong>Recent</strong>
                         <ul class="item-list">
                             {% for wlv in user.workbook_last_view_set.all|dictsortreversed:'last_view'|slice:':5' %}
                             <li class="menu-item"><a href="{% url 'workbook_detail' wlv.workbook.id %}">{{ wlv.workbook.name }}</a></li>
