--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -76,17 +76,28 @@
             <li class="menu-item has-drop-down">
                 <a>PROJECTS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
+                    {% if user.project_last_view_set.all|length > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
                         <ul class="item-list">
-                            <li class="menu-item"> Projects A </li>
-                            <li class="menu-item"> Projects B </li>
-                            <li class="menu-item"> Projects C </li>
+                            {% for plv in user.project_last_view_set.all|dictsortreversed:'last_view'|slice:':5' %}
+                            <li class="menu-item">{{ plv.project.name }}</li>
+                            {% endfor %}
+                            {% if user.project_last_view_set.all|length > 5 %}
+                            <li class="menu-item has-drop-down__more"> More
+                                <ul class="drop">
+                                    {% for plv in user.project_last_view_set.all|dictsortreversed:'last_view'|slice:'5:' %}
+                                    <li class="menu-item">{{ plv.project.name }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                            {% endif %}
                         </ul>
                     </li>
-                    <li class="menu-item"><a href="/">Saved Projectss (10)</a></li>
+                    {% endif %}
+                    <li class="menu-item"><a href="/">Saved Projects (0)</a></li>
                     <li class="menu-item"><a href="/">Upload Project Data</a></li>
-                    <li class="menu-item"><a href="/">Public Projects (2)</a></li>
+                    <li class="menu-item"><a href="/">Public Projects (0)</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
