--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -117,15 +117,26 @@
             <li class="menu-item has-drop-down">
                 <a>GENES <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
+                    {% if user.genefavorite_last_view_set.all|length > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
                         <ul class="item-list">
-                            <li class="menu-item"> Gene Favorite A </li>
-                            <li class="menu-item"> Gene Favorite B </li>
-                            <li class="menu-item"> Gene Favorite C </li>
+                            {% for gflv in user.genefavorite_last_view_set.all|dictsortreversed:'last_view'|slice:':5' %}
+                            <li class="menu-item">{{ gflv.genefavorite.name }}</li>
+                            {% endfor %}
+                            {% if user.genefavorite_last_view_set.all|length > 5 %}
+                            <li class="menu-item has-drop-down__more"> More
+                                <ul class="drop">
+                                    {% for gflv in user.genefavorite_last_view_set.all|dictsortreversed:'last_view'|slice:'5:' %}
+                                    <li class="menu-item">{{ gflv.genefavorite.name }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                            {% endif %}
                         </ul>
                     </li>
-                    <li class="menu-item"><a href="/">Manage Gene Favorite (10)</a></li>
+                    {% endif %}
+                    <li class="menu-item"><a href="/">Manage Gene Favorite (0)</a></li>
                     <li class="menu-item"><a href="/">Create Gene Favorite(s)</a></li>
                     <li class="menu-item"><a href="/">Select Genes for a New Workbook</a></li>
                 </ul>
