--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -144,15 +144,26 @@
             <li class="menu-item has-drop-down">
                 <a>VARIABLES <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
+                    {% if user.variablefavorite_last_view_set.all|length > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
                         <ul class="item-list">
-                            <li class="menu-item"> Variables Favorite A </li>
-                            <li class="menu-item"> Variables Favorite B </li>
-                            <li class="menu-item"> Variables Favorite C </li>
+                            {% for vflv in user.variablefavorite_last_view_set.all|dictsortreversed:'last_view'|slice:':5' %}
+                            <li class="menu-item">{{ vflv.variablefavorite.name }}</li>
+                            {% endfor %}
+                            {% if user.variablefavorite_last_view_set.all|length > 5 %}
+                            <li class="menu-item has-drop-down__more"> More
+                                <ul class="drop">
+                                    {% for vflv in user.variablefavorite_last_view_set.all|dictsortreversed:'last_view'|slice:'5:' %}
+                                    <li class="menu-item">{{ vflv.variablefavorite.name }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                            {% endif %}
                         </ul>
                     </li>
-                    <li class="menu-item"><a href="/">Manage Variables Favorite (10)</a></li>
+                    {% endif %}
+                    <li class="menu-item"><a href="/">Manage Variables Favorite (0)</a></li>
                     <li class="menu-item"><a href="/">Create Favorite Variable(s)</a></li>
                     <li class="menu-item"><a href="/">Select Variabless for a New Workbook</a></li>
                 </ul>
