created dashboard style #6

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
         ga('send', 'pageview');
     </script>
 
+    <!--Typekit-->
+    <script src="https://use.typekit.net/bkz6ame.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 <body id="body">
 <a href="#{% block link_page_name %}content{% endblock %}" class="skip-nav">Skip to main content</a>
