--- a/blink_sass/basic.sass
+++ b/blink_sass/basic.sass
@@ -5,403 +5,365 @@
 /********************************************
  * Main General Styles
  *******************************************/
-//
-//body
-//    background-color: $bg-color
-//
-//blockquote
-//    border-left-color: #006DC6
-//    font-size: 14px
-//    margin: 10px 20px
-//    padding: 2px 20px
-//
-//textarea
-//    height: 40px
-//
-//a
-//    color: $link-color
-//    &:hover
-//        color: $link-color
-//
-//form table td
-//    padding: 10px
-//
-//#spinner-overlay
-//    position: fixed
-//    width: 100%
-//    height: 100%
-//    background: rgba(0,0,0,.5)
-//    z-index: 1000
-//    i
-//        position: fixed
-//        left: 47%
-//        top: 45%
-//        margin: auto
-//        font-size: 200px
-//
-//h1, h2, h3, h4, h5, h6
-//    color: $font-color
-//    font-weight: 250
-//    margin-top: 10px
-//    margin-bottom: 10px
-//
+
+blockquote
+    border-left-color: #006DC6
+    font-size: 14px
+    margin: 10px 20px
+    padding: 2px 20px
+
+textarea
+    height: 40px
+
+a
+    color: $link-color
+    &:hover
+        color: $link-color
+
+form table td
+    padding: 10px
+
+#spinner-overlay
+    position: fixed
+    width: 100%
+    height: 100%
+    background: rgba(0,0,0,.5)
+    z-index: 1000
+    i
+        position: fixed
+        left: 47%
+        top: 45%
+        margin: auto
+        font-size: 200px
+
+h1, h2, h3, h4, h5, h6
+    color: $font-color
+    font-weight: $heading-font-weight
+    margin-top: 10px
+    margin-bottom: 10px
+
 ///********************************************
 // * Navbar Styles
 // *******************************************/
-//
-//nav
-//    background-color: #FFF
-//
-//.navbar
-//    border-bottom-color: $border-color
-//    margin-bottom: 0px
-//    padding-bottom: 0px
-//    height: 56px
-//
-//.navbar-nav
-//    .search-item .input-group
-//        margin-top: 10px
-//        margin-left: 41px
-//        i
-//            padding: 3px
-//
-//    li a:hover
-//        background-color: #fff
-//
-//.navbar-right
-//    margin-top: 6px
-//
-//#secondary-nav
-//    background-color: #fff
-//    border-bottom: 1px solid $border-color
-//    box-shadow: 0px 1px 2px $border-color
-//    top: 55px
-//    z-index: 101
-//    .dropdown > a
-//        cursor: pointer
-//        font-size: 30px
-//        padding: 0px 5px
-//
-//    .menu-items-right
-//        text-align: right
+
+nav
+    background-color: #FFF
+
+.navbar
+    border-bottom-color: $border-color
+    margin-bottom: 0px
+    padding-bottom: 0px
+    height: 56px
+
+.navbar-nav
+    .search-item .input-group
+        margin-top: 10px
+        margin-left: 41px
+        i
+            padding: 3px
+
+    li a:hover
+        background-color: #fff
+
+.navbar-right
+    margin-top: 6px
+
+#secondary-nav
+    background-color: #fff
+    border-bottom: 1px solid $border-color
+    box-shadow: 0px 1px 2px $border-color
+    top: 55px
+    z-index: 101
+    .dropdown > a
+        cursor: pointer
+        font-size: 30px
+        padding: 0px 5px
+
+    .menu-items-right
+        text-align: right
 //
 ///********************************************
 // * Overwriting Bootstrap
 // *******************************************/
 //
-//.btn
-//    color: $font-color
-//    border-radius: 3px
-//    &.active, &.focus
-//        @extend .btn
-//        background-color: $primary-color
-//        border-color: $primary-color
-//
-//
-//.btn-primary
-//    @extend .btn
-//    color: #fff
-//    background-color: $primary-color
-//    border-color: $primary-color-dark
-//    &:hover, &:disabled, &:active, &:focus
-//        @extend .btn
-//        color: #fff
-//        background-color: $primary-color-dark
-//        border-color: $primary-color-dark
-//
-//.btn-success
-//    @extend .btn
-//    background-color: $success-bgcolor
-//    border-color: $success-bgcolor-dark
-//    &:hover
-//        @extend .btn
-//        background-color: $success-bgcolor-dark
-//        border-color: $success-bgcolor-dark
-//
-//.dropdown
-//
-//    &.open > .dropdown-toggle.btn-primary
-//        background-color: $primary-color-dark
-//        border-color: $primary-color-dark
-//
-//    &.dropdown-menu-right
-//        text-align: right
-//
-//    .dropdown-toggle:hover
-//        background-color: #EEE
-//        &.btn-primary
-//            background-color: $primary-color-dark
-//
-//    .dropdown-menu
-//        border-radius: 1px
-//        margin: 0px
-//        > li > a
-//            padding: 3px 10px
-//        i
-//            text-align: center
-//            width: 20px
-//        &.dropdown-menu-right
-//            > li > a
-//                text-align: right
-//.nav-tabs
-//    background-color: #fff
-//    border: none
-//    border-radius: 0px
-//    margin-left: 0px
-//    //border-bottom: 1px transparent solid
-//    > li > a
-//        @extend .nav-tabs
-//        margin-right: 0px
-//    > li.active > a, li.active > a:focus
-//        //border: 1px solid #ddd
-//        @extend .nav-tabs
-//        border: none
-//        border-bottom: 2px $primary-color solid
-//        font-weight: bold
-//    > li.active:hover > a
-//        @extend .nav-tabs
-//        border-bottom: 2px $primary-color solid
-//    > li:hover > a
-//        @extend .nav-tabs
-//        background-color: $primary-color-light
-//        //border: 1px solid #ddd
-//        border-radius: 0px
-//        border-bottom: 2px transparent solid
-//
-//    .navbar-right
-//        margin-top: 0px
-//        margin-right: -2px
-//
-//    &.nav-stacked
-//        > li:first-child > a
-//            border-top-left-radius: 3px
-//        > li:last-child > a
-//            border-bottom-left-radius: 3px
-//        > li.active > a, li.active > a:focus
-//            @extend .nav-tabs
-//            border: none
-//            border-right: 2px $primary-color solid
-//        > li.active:hover > a
-//            @extend .nav-tabs
-//            border-right: 2px $primary-color solid
-//        > li:hover > a
-//            @extend .nav-tabs
-//            background-color: $primary-color-light
-//            border-right: 2px transparent solid
-//
-//.tab-content
-//    background-color: #FFF
-//    padding: 5px 10px
-//
-//.breadcrumb
-//    background-color: $bg-color
-//    border-radius: 0px
-//    margin-bottom: 10px
-//    padding: 5px 15px
-//
-//.alert
-//    border-radius: 1px
-//    border: 5px solid transparent
-//    padding: 10px
-//    .close
-//        right: 0px
-//    &.alert-success
-//        background-color: $bg-color
-//        border-color: $success-bgcolor-dark
-//    &.alert-info
-//        color: $info-color
-//        background-color: $bg-color
-//        border-color: $info-bgcolor-dark
-//    &.alert-warning
-//        background-color: $bg-color
-//        border-color: $warning-bgcolor-dark
-//    &.alert-error
-//        background-color: $bg-color
-//        border-color: $danger-bgcolor-dark
-//
-//.container-fluid
-//    padding-bottom: 15px
-//
-//.modal-content
-//    border-radius: 1px
-//    .modal-header
-//        padding: 10px
-//        .close
-//            margin-top: 0px
-//            opacity: 0.5
-//    .modal-body
-//        padding: 10px
-//    .modal-footer
-//        padding: 10px
-//
-//.form-control
-//    border-radius: 1px
-//    padding: 5px 10px
-//
-//.ui-autocomplete
-//    max-height: 200px
-//    overflow-y: auto
-//    overflow-x: hidden
-//    z-index: 10000
-//    .ui-menu-item
-//        color: $font-color
-//        &.ui-state-focus
-//            color: $font-color
-//            background-color: $bg-color
-//            border-color: $bg-color
-//
-//.tokenfield
-//    .token
-//        border-radius: 1px
-//        margin: 2px 5px 0px 0px
-//
-//.label
-//    font-weight: normal
-//    font-size: 100%
-//    color: $link-color
-//    border-radius: 15px
-//    margin: 5px
-//    padding: 5px 15px
-//    &.label-default
-//        background-color: $primary-color-xlight
-//        &:hover
-//            color: $link-color
-//            background-color: $primary-color-light
-//
-//.panel
-//    border-color: $border-color
-//    border-top-color: transparent
-//    box-shadow: 0px 1px 2px $border-color
-//    .panel-heading
-//        border-bottom-color: $border-color
-//        color: $link-color
-//
-//
-///********************************************
-// * Tablesorter Style Overrides
-// *******************************************/
-//
-//.tablesorter
-//    th
-//        cursor: pointer
-//        &:first-child
-//            cursor: auto
-//    .headerSortUp:after
-//        content: "\f077"
-//        float: right
-//        font-family: FontAwesome
-//        margin-left: -20px
-//    .headerSortDown:after
-//        content: "\f078"
-//        float: right
-//        font-family: FontAwesome
-//        margin-left: -20px
-//
-///********************************************
-// * Handy Classes
-// *******************************************/
-//
-//.inline-block
-//    display: inline-block
-//    vertical-align: top
-//
-//.block
-//    display: block
-//
-//.float-right
-//    float: right
-//.float-left
-//    float: left
-//
-//.space-top-15
-//    margin-top: 15px
-//.space-bottom-15
-//    margin-bottom: 15px
-//.space-left-15
-//    margin-left: 15px
-//.space-right-15
-//    margin-right: 15px
-//
-//.space-top-10
-//    margin-top: 10px
-//.space-bottom-10
-//    margin-bottom: 10px
-//.space-left-10
-//    margin-left: 10px
-//.space-right-10
-//    margin-right: 10px
-//
-//.space-top-5
-//    margin-top: 5px
-//.space-bottom-5
-//    margin-bottom: 5px
-//.space-left-5
-//    margin-left: 5px
-//.space-right-5
-//    margin-right: 5px
-//
-///********************************************
-// * Logout Modal
-// *******************************************/
-//#logout-modal
-//
-//    h5
-//        margin-bottom: 5px
-//
-//    table
-//        display: none
-//        margin-bottom: 0px
-//
-//        td
-//            padding: 5px 10px
-//        .selection
-//            width: 75px
-//            text-align: center
-//    .indent
-//        padding-left: 30px
-//
-//    label
-//        font-weight: 500
-//        margin-bottom: 3px
-//
-///********************************************
-// * Whole Site Widget Style
-// *******************************************/
-//
-//a.skip-nav
-//    position: absolute
-//    top: -1000px
-//    left: -1000px
-//    height: 1px
-//    width: 1px
-//    overflow: hidden
-//
-//.navbar-brand
-//    height: 50px
-//    padding: 5px 5px 5px 20px
-//    width: auto
-//
-//#user-login
-//    .avatar-link:hover
-//        text-decoration: none
-//    .login-link
-//        font-size: 16px
-//
-//    img
-//        margin: 0px 10px
-//        border-radius: 50%
-//        border: 1px solid $bg-color
-//
-//    .dropdown
-//        display: inline-block
-//        font-size: 16px
-//        margin-right: 15px
-//
-//
-//        > a:hover, > a:focus
-//            background-color: #fff
-//            cursor: pointer
-//            text-decoration: none
-//
-//        > ul
-//            margin-top: 10px
+
+.dropdown
+
+    &.open > .dropdown-toggle.btn-primary
+        background-color: $primary-color-dark
+        border-color: $primary-color-dark
+
+    &.dropdown-menu-right
+        text-align: right
+
+    .dropdown-toggle:hover
+        background-color: #EEE
+        &.btn-primary
+            background-color: $primary-color-dark
+
+    .dropdown-menu
+        border-radius: 1px
+        margin: 0px
+        > li > a
+            padding: 3px 10px
+        i
+            text-align: center
+            width: 20px
+        &.dropdown-menu-right
+            > li > a
+                text-align: right
+.nav-tabs
+    background-color: #fff
+    border: none
+    border-radius: 0px
+    margin-left: 0px
+    //border-bottom: 1px transparent solid
+    > li > a
+        @extend .nav-tabs
+        margin-right: 0px
+    > li.active > a, li.active > a:focus
+        //border: 1px solid #ddd
+        @extend .nav-tabs
+        border: none
+        border-bottom: 2px $primary-color solid
+        font-weight: bold
+    > li.active:hover > a
+        @extend .nav-tabs
+        border-bottom: 2px $primary-color solid
+    > li:hover > a
+        @extend .nav-tabs
+        background-color: $primary-color-light
+        //border: 1px solid #ddd
+        border-radius: 0px
+        border-bottom: 2px transparent solid
+
+    .navbar-right
+        margin-top: 0px
+        margin-right: -2px
+
+    &.nav-stacked
+        > li:first-child > a
+            border-top-left-radius: 3px
+        > li:last-child > a
+            border-bottom-left-radius: 3px
+        > li.active > a, li.active > a:focus
+            @extend .nav-tabs
+            border: none
+            border-right: 2px $primary-color solid
+        > li.active:hover > a
+            @extend .nav-tabs
+            border-right: 2px $primary-color solid
+        > li:hover > a
+            @extend .nav-tabs
+            background-color: $primary-color-light
+            border-right: 2px transparent solid
+
+.tab-content
+    background-color: #FFF
+    padding: 5px 10px
+
+.breadcrumb
+    background-color: $bg-color
+    border-radius: 0px
+    margin-bottom: 10px
+    padding: 5px 15px
+
+.alert
+    border-radius: 1px
+    border: 5px solid transparent
+    padding: 10px
+    .close
+        right: 0px
+    &.alert-success
+        background-color: $bg-color
+        border-color: $success-bgcolor-dark
+    &.alert-info
+        color: $info-color
+        background-color: $bg-color
+        border-color: $info-bgcolor-dark
+    &.alert-warning
+        background-color: $bg-color
+        border-color: $warning-bgcolor-dark
+    &.alert-error
+        background-color: $bg-color
+        border-color: $danger-bgcolor-dark
+
+.container-fluid
+    padding-bottom: 15px
+
+.modal-content
+    border-radius: 1px
+    .modal-header
+        padding: 10px
+        .close
+            margin-top: 0px
+            opacity: 0.5
+    .modal-body
+        padding: 10px
+    .modal-footer
+        padding: 10px
+
+.form-control
+    border-radius: 1px
+    padding: 5px 10px
+
+.ui-autocomplete
+    max-height: 200px
+    overflow-y: auto
+    overflow-x: hidden
+    z-index: 10000
+    .ui-menu-item
+        color: $font-color
+        &.ui-state-focus
+            color: $font-color
+            background-color: $bg-color
+            border-color: $bg-color
+
+.tokenfield
+    .token
+        border-radius: 1px
+        margin: 2px 5px 0px 0px
+
+.label
+    font-weight: normal
+    font-size: 100%
+    color: $link-color
+    border-radius: 15px
+    margin: 5px
+    padding: 5px 15px
+    &.label-default
+        background-color: $primary-color-xlight
+        &:hover
+            color: $link-color
+            background-color: $primary-color-light
+
+
+
+/********************************************
+ * Tablesorter Style Overrides
+ *******************************************/
+
+.tablesorter
+    th
+        cursor: pointer
+        &:first-child
+            cursor: auto
+    .headerSortUp:after
+        content: "\f077"
+        float: right
+        font-family: FontAwesome
+        margin-left: -20px
+    .headerSortDown:after
+        content: "\f078"
+        float: right
+        font-family: FontAwesome
+        margin-left: -20px
+
+/********************************************
+ * Handy Classes
+ *******************************************/
+
+.inline-block
+    display: inline-block
+    vertical-align: top
+
+.block
+    display: block
+
+.float-right
+    float: right
+.float-left
+    float: left
+
+.space-top-15
+    margin-top: 15px
+.space-bottom-15
+    margin-bottom: 15px
+.space-left-15
+    margin-left: 15px
+.space-right-15
+    margin-right: 15px
+
+.space-top-10
+    margin-top: 10px
+.space-bottom-10
+    margin-bottom: 10px
+.space-left-10
+    margin-left: 10px
+.space-right-10
+    margin-right: 10px
+
+.space-top-5
+    margin-top: 5px
+.space-bottom-5
+    margin-bottom: 5px
+.space-left-5
+    margin-left: 5px
+.space-right-5
+    margin-right: 5px
+
+/********************************************
+ * Logout Modal
+ *******************************************/
+#logout-modal
+
+    h5
+        margin-bottom: 5px
+
+    table
+        display: none
+        margin-bottom: 0px
+
+        td
+            padding: 5px 10px
+        .selection
+            width: 75px
+            text-align: center
+    .indent
+        padding-left: 30px
+
+    label
+        font-weight: 500
+        margin-bottom: 3px
+
+/********************************************
+ * Whole Site Widget Style
+ *******************************************/
+
+a.skip-nav
+    position: absolute
+    top: -1000px
+    left: -1000px
+    height: 1px
+    width: 1px
+    overflow: hidden
+
+.navbar-brand
+    height: 50px
+    padding: 5px 5px 5px 20px
+    width: auto
+
+#user-login
+    .avatar-link:hover
+        text-decoration: none
+    .login-link
+        font-size: 16px
+
+    img
+        margin: 0px 10px
+        border-radius: 50%
+        border: 1px solid $bg-color
+
+    .dropdown
+        display: inline-block
+        font-size: 16px
+        margin-right: 15px
+
+
+        > a:hover, > a:focus
+            background-color: #fff
+            cursor: pointer
+            text-decoration: none
+
+        > ul
+            margin-top: 10px
