fix #20. Created /new_cohort url to resemble the current create new cohort

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -54,7 +54,7 @@
             <section class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                        <a href="{% url 'cohort' %}">Saved Cohorts(0)</a></h3>
+                        <a href="{% url 'cohort_list' %}">Saved Cohorts(0)</a></h3>
                 </div>
             </section>
             <section class="panel panel-default">
