header style adapted to responsive

--- a/blink_sass/variables.sass
+++ b/blink_sass/variables.sass
@@ -18,6 +18,7 @@ $isb-info:    #49AFCD
 $isb-success: #C9DD03
 $isb-warning: #F7991B
 $isb-danger:  #BB00BB
+$isb-dark:    #676767
 
 // Additional color choices
 $nav-bg: $white
