--- a/blink_sass/components/_header.sass
+++ b/blink_sass/components/_header.sass
@@ -5,24 +5,35 @@ body
   padding-top: 50px
   transition: all 0.4s ease-in
 
+.navbar-left
+  float: left
+  margin-top: 5px
+
+.navbar-right
+  float: right
+  margin-top: 14px
+  margin-right: 0
+
+.navbar-brand
+    height: 50px
+    padding: 5px 5px 5px 0
+    width: auto
+    float: none
+    display: inline-block
+
 nav, .site-header
   background: $nav-bg
   a
     color: $font-color
 
-.navbar-right
-  margin-right: 0
-
-.navbar-link a
-  color: $link-color
-  &:hover, &:focus
-    color: darken($link-color, 10%)
-
 .navbar-item
-  display: inline-block
+  display: inline-block !important
   vertical-align: middle
   padding-right: 5px
   padding-left: 5px
+  float: none !important
+  > a
+    padding: 0 !important
 
   &__text
     display: inline-block
@@ -33,70 +44,49 @@ nav, .site-header
     i.fa
       padding: 0 5px
 
-.subnav
-  background-color: darken($white, 10%)
-  a:hover
-    text-decoration: none
+.navbar-link
+  padding-right: 10px
+  padding-left: 10px
+  a
+    color: $link-color
+    &:hover, &:focus
+      color: darken($link-color, 10%)
 
-  ul, li
-    list-style: none
-    padding: 0
-    margin-bottom: 0
 
-  li
-    padding: 10px
+a.skip-nav
+    position: absolute
+    top: -1000px
+    left: -1000px
+    height: 1px
+    width: 1px
+    overflow: hidden
 
-  & > ul > li
-    display: inline-block
-    vertical-align: top
-    position: relative
-    padding: 15px 25px
+#user-login
+    .avatar-link
+      display: inline-block
+      vertical-align: middle
+    .avatar-link:hover
+        text-decoration: none
+    .login-link
+        font-size: 16px
 
-    &:hover
-      background: darken($white, 15%)
+    img
+        margin: 0px 10px
+        border-radius: 50%
+        border: 1px solid $bg-color
 
-      > .navitem-list, &:hover > ul
-        display: block
-        position: absolute
-        background: darken($white, 15%)
-        top: 100%
-        left: 0
+    .dropdown
+        display: inline-block
+        vertical-align: middle
+        font-size: 16px
+        margin-right: 15px
 
-.menu-item
-  position: relative
 
-  .sub-menu
-    width: 250px
-    padding: 10px 15px
-    > li
-      padding: 10px 5px
-      border-bottom: 1px solid $white
+        > a:hover, > a:focus
+            background-color: #fff
+            cursor: pointer
+            text-decoration: none
 
-      &:last-child
-        border-bottom: none
-    .item-list li:hover
-      background: darken($white, 20%)
+        > ul
+            margin-top: 10px
 
-  &.has-drop-down
-    > .drop
-      display: none
-    &:hover > .drop
-      display: block
-
-    &__more
-      &:after
-        @extend %fa
-        content: "\f0da" // caret right
-        @include vertical-align(absolute)
-        right: 15px
-
-      > .drop
-        display: none
-        position: absolute
-        left: 100%
-        top: -10px
-        padding: 10px
-        background: darken($white, 5%)
-        width: 250px
-      &:hover > .drop
-        display: block
