--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -6,17 +6,16 @@
         <div class="row">
             <div class="col-lg-12">
             <div class="nav navbar-left">
-                 <ul class="nav navbar-nav">
-                    <a href="{% url 'dashboard' %}"><img class="navbar-brand" src="{% static 'img/isblogo.png' %}" alt="ISB Logo"/></a>
-                    <li><a href="{% url 'dashboard' %}">ISB-CGC</a></li>
-                    <li class="navbar-link"><a href="{% url 'about_page' %}">About</a></li>
-                    <li class="navbar-link"><a href="{% url 'help_page' %}">Help</a></li>
+                 <ul class="">
+                    <li class="navbar-item"> <a href="{% url 'dashboard' %}"><img class="navbar-brand" src="{% static 'img/isblogo.png' %}" alt="ISB Logo"/><span class="navbar-item">ISB-CGC</span></a></li>
+                    <li class="navbar-link navbar-item"><a href="{% url 'about_page' %}">About</a></li>
+                    <li class="navbar-link navbar-item"><a href="{% url 'help_page' %}">Help</a></li>
                 </ul>
             </div>
 
             <div class="nav navbar-right">
                 {% if user.is_authenticated %}
-                    <div id="user-login" class="navbar-form navbar-item">
+                    <div id="user-login" class="navbar-item">
                         <a class="avatar-link" href="{% url 'user_detail' user.id %}">
                             <img src="{{ user.socialaccount_set.all.0.get_avatar_url }}" width="32" height="32" alt="Avatar Link to User Details">
                         </a>
@@ -30,7 +29,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="navbar-form navbar-item">
+                    <div class="navbar-item">
                         <a type="button" class="navbar-item__text" data-toggle="collapse" data-target="#subnav" aria-expanded="false" aria-controls="subnav"><i class="fa fa-bars"></i>Menu</a>
                     </div>
                 {% else %}
