--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -5,10 +5,45 @@
 {% block header %}
 {% endblock %}
 
-{% block link_page_name %}user-landing{% endblock %}
-{% block page_name %}user-landing{% endblock %}
+{% block title %}
+    Cohorts | ISB-CGC
+{% endblock %}
+
+{% block link_page_name %}corhorts-list{% endblock %}
+{% block page_name %}corhorts-list{% endblock %}
 
 {% block content %}
+<div class="container">
+    <h1 class="page-header">Cohorts</h1>
+    <div class="menu-group">
+
+    </div>
+    <div class="panel tab-content">
+        {% if cohorts %}
+            <table id="cohort-table" class="table table-striped tablesorter">
+                <thead><tr>
+                    <th class="checkbox-col"><input type="checkbox" class="select-all" title="select-all"/></th>
+                    <th class="name-col">Cohort Name</th>
+                    <th class="sample-col"># of Samples</th>
+                    <th class="owner-col">Owner</th>
+                    <th class="date-col">Last Modified</th>
+                </tr></thead>
+                <tbody>
+                {% for cohort in cohorts %}
+                    <tr>
+                        <td class="checkbox-col"><input type="checkbox" name="id" value="{{ cohort.id }}" title="{{ cohort.name }} Checkbox" aria-label="cohort-checkbox"/></td>
+                        <td class="name-col"><a href="{% url 'cohort_details' cohort.id %}">{{ cohort.name }}</a></td>
+                        <td class="sample-col">{{ cohort.num_patients }}</td>
+                        <td class="owner-col">{{ cohort.owner.email }}</td>
+                        <td class="date-col">{{ cohort.last_date_saved|date:"SHORT_DATETIME_FORMAT" }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% endif %}
+    </div>
+</div>
+
 <!-- TODO: refactor cohorts page view, take out visualizations -->
     <div id="user-landing-tabs" role="tabpanel" class="col-lg-12">
         <div class="row">
