working on projects view

--- a/blink_sass/basic.sass
+++ b/blink_sass/basic.sass
@@ -1,6 +1,16 @@
 .main-content
     margin-top: 80px
 
+.page-header
+    font-size: $font-size-h3
+    margin-top: 1em
+
+.page-action-group
+    padding: 5px 15px
+    border-radius: $border-radius-base
+    background-color: $white
+
+
 // TODO: Refactor this into our styles
 /********************************************
  * Main General Styles
