--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -11,8 +11,8 @@
 {% block content %}
 <div class="container">
     <h1 class="page-header">Data Upload</h1>
-    <menu class="action-group">
-        <button class="btn btn-default"><i class="fa fa-cloud-upload"></i>Upload Data</button>
+    <menu class="page-action-group" type="list">
+        <menuitem class="btn btn-default"><i class="fa fa-cloud-upload"></i>Upload Data</menuitem>
     </menu>
     <section>
         <input type="radio" name="new-project"> <label for="new-project">New Project</label>
