--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -10,9 +10,7 @@
 
 {% block content %}
 <div class="container">
-    <div class="page-header">
-        <h1 class="page-title">Your Dashboard</h1>
-    </div>
+    <h1 class="page-header">Your Dashboard</h1>
 
     <section class="panel panel-default">
         <div class="panel-heading">
