--- a/static/css/vendor.css
+++ b/static/css/vendor.css
@@ -4067,19 +4067,19 @@ tbody.collapse.in {
       color: #444; }
 
 .breadcrumb {
-  padding: 8px 15px;
+  padding: 8px 0;
   margin-bottom: 20px;
   list-style: none;
-  background-color: #f5f5f5;
+  background-color: #fff;
   border-radius: 2px; }
   .breadcrumb > li {
     display: inline-block; }
     .breadcrumb > li + li:before {
-      content: "/ ";
+      content: "> ";
       padding: 0 5px;
-      color: #ccc; }
+      color: #49AFCD; }
   .breadcrumb > .active {
-    color: #777777; }
+    color: #49AFCD; }
 
 .pagination {
   display: inline-block;
