--- a/templates/base.html
+++ b/templates/base.html
@@ -41,20 +41,28 @@
     {% block secondary_nav %}{% endblock %}
 </div>
 
-<main id="{% block page_name %}content{% endblock %}" class="container main-content">
-    {% if messages %}
-        <div class="row">
-            <div class="col-lg-12">
-                {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }} alert-dismissible">
-                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            </div>
+<main id="{% block page_name %}content{% endblock %}" class="main-content">
+    <div class="page-heading">
+        <div class="container">
+            {% block page_header %}{% endblock %}
         </div>
-    {% endif %}
-    <div class="row">{% block content %}{% endblock %}</div>
+    </div>
+    <div class="container">
+        {% if messages %}
+            <div class="row">
+                <div class="col-lg-12">
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }} alert-dismissible">
+                            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
+        <div class="row">{% block content %}{% endblock %}</div>
+    </div>
+
     <!-- Logout Modal -->
 </main>
 <div class="modal fade" id="logout-modal" tabindex="-1" role="dialog" aria-labelledby="logoutModalLabel" aria-hidden="true">
