basically finish gene favorite detail page design, need to twick gene list typography #31

--- a/blink_sass/_button.sass
+++ b/blink_sass/_button.sass
@@ -7,3 +7,6 @@
         background-color: $isb-warning
         color: $white
         border: 1px solid $isb-warning
+
+.btn-link
+  font-weight: $regular-font-weight
