--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -14,6 +14,16 @@
     padding: 5px 0
     border-radius: $border-radius-base
     background-color: $white
+    .btn
+      margin-right: 10px
+
     &, li
         margin: 0
         list-style: none
+
+.separator
+  margin: 0 15px 0 5px
+  display: inline-block
+  height: 25px
+  border-right: 1px solid $isb-dark
+  vertical-align: middle
