--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -2,6 +2,7 @@
     background: $white
     margin-bottom: 20px
     padding: 15px 0
+    text-transform: capitalize
 
 .page-header
     font-size: $font-size-h3
